examples/test/testpolicy1423.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1423
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key28: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value42
      podSelector:
        matchLabels:
          key15: value49
          key26: value46
          key40: value9
